# EN-TTOKK

./: .gitignore  CLAUDE.md  biome.json  package.json
.claude/: settings.local.json
.kiro/steering/: product.md  structure.md  tech.md
.sisyphus/: boulder.json
.sisyphus/drafts/: github-sidebar-activity.md  jira-calendar.md  jira-sidebar.md
.sisyphus/notepads/kst-timezone-refactor/: notes.md
.sisyphus/plans/: daily-notes-save-load-review.md  kst-timezone-refactor.md
apps/backend/: package.json  tsconfig.json
apps/backend/scripts/: build.ts
apps/backend/src/: index.ts
apps/backend/src/lib/: logger.ts  validation.ts
apps/backend/src/routes/: chat.ts  google-calendar.ts  jira.ts
apps/backend/src/services/: claude-cli.ts
apps/backend/tests/: jira-route.test.ts  jira-validation.test.ts
apps/desktop-app/: index.html  package.json  vite.config.ts
apps/desktop-app/src/: App.tsx  bindings.ts  main.tsx
apps/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-app/src-tauri/capabilities/: default.json
apps/desktop-app/src-tauri/src/: lib.rs  sidecar.rs
apps/desktop-app/src-tauri/src/commands/: claude.rs  file.rs  github.rs  mod.rs  secure.rs  vault.rs  whisper.rs
apps/desktop-app/src/components/: ThemeProvider.tsx
apps/desktop-app/src/hooks/: useBackend.ts
apps/desktop-app/src/layouts/: EditorLayout.tsx
openspec/changes/add-meeting-notes/: design.md  proposal.md  tasks.md
openspec/changes/chat-input-autofocus/: design.md  proposal.md  tasks.md
openspec/specs/auto-open-daily-note/: spec.md
(+104 files in other folders)
