[package]
name = "desktop-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-stronghold = "2"
keyring = "2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
tauri-specta = { git = "https://github.com/specta-rs/tauri-specta", branch = "main", features = ["typescript"] }
specta-typescript = "0.0.9"

# Editor dependencies
walkdir = "2"
notify = "6"
regex = "1"
tokio = { version = "1", features = ["fs"] }

[profile.dev.package.scrypt]
opt-level = 3
